POM improvements